--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <h3>Languages</h3>
             <div class="pill-row">
               <span class="pill">Python</span>
-              <span class="pill">Java</span>
+              <span class="pill">Java Script</span>
               <span class="pill">C++</span>
               <span class="pill">HTML</span>
               <span class="pill">CSS</span>
@@ -211,13 +211,13 @@
         </div>
 
         <div class="contact-info">
-          <a href="mailto:youremail@example.com" class="contact-item">
+          <a href="mailto:levibmackay@gmail.com" class="contact-item">
             <span class="contact-label">Email</span>
-            <span>youremail@example.com</span>
+            <span>levibmackay@gmail.com</span>
           </a>
-          <a href="https://github.com/your-github" target="_blank" class="contact-item">
+          <a href="https://github.com/levibmackay" target="_blank" class="contact-item">
             <span class="contact-label">GitHub</span>
-            <span>github.com/your-github</span>
+            <span>https://github.com/levibmackay</span>
           </a>
           <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" class="contact-item">
             <span class="contact-label">LinkedIn</span>
