--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
         <div class="section-header">
           <h2>About Me</h2>
           <p>
-            I am a computer science student who likes solving real problems with code.
-            I enjoy backend work with SQL and Python as well as building simple,
-            clean user interfaces.
+            I am a Computer Science student at BYU–Idaho with a 4.0 GPA and growing experience in Python, SQL, and building clean, practical software solutions. My background is pretty different from the usual tech path. I’ve worked as a landscape foreman, a farm hand, a ski lift operator, and a dealer operations assistant. But those jobs taught me how to work hard, solve problems quickly, and keep things running smoothly even when the pressure is on.
+            I like building tools that actually help people, whether that’s automating everyday tasks, organizing data, or creating projects that make learning easier. I enjoy taking messy problems and breaking them down into something simple and usable. Right now I’m focused on improving my backend skills, learning more about full-stack development, and creating projects that combine programming with things I care about like sports, language learning, and data analysis.
           </p>
         </div>
 
